Version 2.0 - 2018-04-13
* FEA#7889 Allow generating insurer reports about claims
* FEA#0000 Changelog file creation