@@ -1,3 +1,5 @@
+* BUG#9019 Ajouter un searcher sur le champ claim_stock_reports
+
 Version 2.0 - 2018-04-13
 * FEA#7889 Génération d'un rapport avec l'ensemble des sinistres d'un assureur
 * FEA#0000 Création du fichier de suivi
