@@ -1,3 +1,5 @@
+* BUG#9019 Add a searcher on claim_stock_reports field
+
 Version 2.0 - 2018-04-13
 * FEA#7889 Allow generating insurer reports about claims
 * FEA#0000 Changelog file creation
